--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "type": "module",
     "scripts": {
         "start": "node index.js",
-        "dev": "node --watch index.js"
+        "dev": "node --watch index.js",
+        "seed": "node src/scripts/seedData.js"
     },
     "dependencies": {
         "cors": "^2.8.5",
